splitting users & setting redirect

--- a/client/src/scss/_style.scss
+++ b/client/src/scss/_style.scss
@@ -44,18 +44,15 @@
 
         & * {
           cursor: pointer;
+          font-weight: normal;
           color: $cMain;
+          padding: 5px 0;
+          display: block;
           @include transition;
 
           &:hover {
             color: $cMainHover;
           }
-        }
-
-        p {
-          padding: 5px 0;
-          color: $cMain;
-          font-weight: normal;
         }
       }
     }
