--- a/client/src/scss/_vars.scss
+++ b/client/src/scss/_vars.scss
@@ -10,6 +10,8 @@ $cWhite: #FFFFFF;
 $cWhiteHover: #F6F6F6;
 $cBackground: rgba($cMain, .1);
 
+$cInputHover: #E7E7E7;
+
 $cText: #555555;
 $cTextTitle: #333333;
 $cTextSmall: #777777;
