--- a/client/src/scss/_vars.scss
+++ b/client/src/scss/_vars.scss
@@ -4,6 +4,7 @@ sans-serif;
 
 $cMain: #796AEE;
 $cMainHover: #503ce9;
+$cMainDark: linear-gradient(315deg, #796AEE, #5b50b1);
 
 $cBlack: #2F333E;
 $cWhite: #FFFFFF;
