--- a/client/src/scss/_style.scss
+++ b/client/src/scss/_style.scss
@@ -171,11 +171,11 @@
         padding: 10px 50px;
         border-radius: 50px;
         color: $cWhite;
-        box-shadow: 0 5px 15px rgba($cMain, .5);
+        box-shadow: 0 5px 5px rgba($cBlack, .2);
         @include transition;
 
         &:hover {
-          box-shadow: 0 5px 25px rgba($cMain, .7);
+          box-shadow: 0 5px 20px rgba($cBlack, .5);
         }
       }
     }
@@ -210,11 +210,11 @@
       margin-top: 30px;
       text-align: center;
       font-size: 18px;
-      box-shadow: 0 5px 15px rgba($cMain, .5);
+      box-shadow: 0 5px 5px rgba($cBlack, .2);
       @include transition;
 
       &:hover {
-        box-shadow: 0 5px 25px rgba($cMain, .7);
+        box-shadow: 0 5px 20px rgba($cBlack, .5);
       }
     }
   }
