--- a/client/src/scss/_fonts.scss
+++ b/client/src/scss/_fonts.scss
@@ -2,4 +2,5 @@
 
 @include font-face("Montserrat", "../fonts/MontserratLight/MontserratLight", 300);
 @include font-face("Montserrat", "../fonts/MontserratRegular/MontserratRegular", normal);
+@include font-face("Montserrat", "../fonts/MontserratMedium/MontserratMedium", 500);
 @include font-face("Montserrat", "../fonts/MontserratBold/MontserratBold", bold);
