--- a/client/src/scss/_vars.scss
+++ b/client/src/scss/_vars.scss
@@ -7,6 +7,7 @@ $cMainHover: #503ce9;
 $cMainDark: linear-gradient(315deg, #796AEE, #5b50b1);
 
 $cBlack: #2F333E;
+$cGray: #999999;
 $cWhite: #FFFFFF;
 $cWhiteHover: #F6F6F6;
 $cBackground: rgba($cMain, .1);
